[package]
name = "aur-buildorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
futures = "0.3.27"
git2 = "0.16.1"
alpm = "2"
pacmanconf = "2.0.0"
rayon = "1.7.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
srcinfo = "1.1.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
petgraph = "0.6.3"
rustyline = "11.0.0"
tempfile = "3.4.0"
clap = { version = "4.1.8", features = ["derive"] }
fs_extra = "1.3.0"
crossterm = "0.26.1"
syscalls = "0.6.7"
sudo = "0.6.0"
rustix = "0.37.1"
bincode = "1.3.3"
itertools = "0.10.5"
gpgme = "0.11.0"
ordered-float = { version = "3.4.0", features = ["serde"] }
retry = "2.0.0"
indicatif = "0.17.3"
tokio-stream = { version = "0.1.12", features = ["io-util"] }
nix = { version = "0.26.2", default-features = false, features = ["term", "fs"] }
